--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,7 +12,7 @@ jobs:
         nix_path: nixpkgs=channel:nixos-unstable
     - uses: cachix/cachix-action@v14
       with:
-        name: geodic
+        name: phoenix
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
     - uses: nicknovitski/nix-develop@v1
     - run: for host in euler; do deploy .#$host; done
@@ -25,7 +25,7 @@ jobs:
         nix_path: nixpkgs=channel:nixos-unstable
     - uses: cachix/cachix-action@v14
       with:
-        name: geodic
+        name: phoenix
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
     - uses: nicknovitski/nix-develop@v1
     - run: for host in euclid; do deploy .#$host; done
