--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,12 +4,14 @@ on:
   push:
 jobs:
   deploy-x64_86:
-    runs-on: ubuntu-latest
+    runs-on: 	ubuntu-24.04
     steps:
     - uses: actions/checkout@v4
-    - uses: cachix/install-nix-action@v25
+    - uses: nixbuild/nix-quick-install-action@v30
+    - uses: nix-community/cache-nix-action@v6
       with:
-        nix_path: nixpkgs=channel:nixos-unstable
+        primary-key: nix-${{ runner.os }}-${{ hashFiles('**/*.nix', '**/flake.lock') }}
+        restore-prefixes-first-match: nix-${{ runner.os }}-
     - uses: cachix/cachix-action@v14
       with:
         name: phoenix
@@ -17,12 +19,14 @@ jobs:
     - uses: nicknovitski/nix-develop@v1
     - run: for host in euler; do deploy .#$host; done
   deploy-aarch64:
-    runs-on: ubuntu-latest-arm64
+    runs-on: 	ubuntu-24.04-arm
     steps:
     - uses: actions/checkout@v4
-    - uses: cachix/install-nix-action@v25
+    - uses: nixbuild/nix-quick-install-action@v30
+    - uses: nix-community/cache-nix-action@v6
       with:
-        nix_path: nixpkgs=channel:nixos-unstable
+        primary-key: nix-${{ runner.os }}-${{ hashFiles('**/*.nix', '**/flake.lock') }}
+        restore-prefixes-first-match: nix-${{ runner.os }}-
     - uses: cachix/cachix-action@v14
       with:
         name: phoenix
