--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,7 +17,7 @@ jobs:
         name: phoenix
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
     - uses: nicknovitski/nix-develop@v1
-    - run: for host in euler; do deploy .#$host | ack --passthru --nocolor "Copying profile" || exit 1; done
+    - run: for host in euler; do deploy .#$host 2>&1 | ack --passthru --nocolor "Copying profile" || exit 1; done
   deploy-aarch64:
     runs-on: 	ubuntu-24.04-arm
     steps:
@@ -32,4 +32,4 @@ jobs:
         name: phoenix
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
     - uses: nicknovitski/nix-develop@v1
-    - run: for host in euclid; do deploy .#$host | ack --passthru --nocolor "Copying profile" || exit 1; done
+    - run: for host in euclid; do deploy .#$host 2>&1 | ack --passthru --nocolor "Copying profile" || exit 1; done
