--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,7 +17,14 @@ jobs:
         oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
         oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
         tags: tag:phoenix-ci
-    - uses: actions/checkout@v4
+    - uses: webfactory/ssh-agent@v0.9.0
+      with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+    - run: |
+        mkdir -p ~/.ssh
+        echo "Host *" >> ~/.ssh/config
+        echo "    StrictHostKeyChecking=no" >> ~/.ssh/config
+        echo "    UserKnownHostsFile=/dev/null" >> ~/.ssh/config
     - uses: nixbuild/nix-quick-install-action@v30
     - uses: nix-community/cache-nix-action@v6
       with:
@@ -28,6 +35,7 @@ jobs:
       with:
         name: phoenix
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+    - uses: actions/checkout@v4
     - uses: nicknovitski/nix-develop@v1
     - run: for host in euler; do deploy -sk .#$host 2>&1 | ack --passthru --nocolor "Copying profile" || exit 1; done
 
@@ -39,7 +47,14 @@ jobs:
         oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
         oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
         tags: tag:phoenix-ci
-    - uses: actions/checkout@v4
+    - uses: webfactory/ssh-agent@v0.9.0
+      with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+    - run: |
+        mkdir -p ~/.ssh
+        echo "Host *" >> ~/.ssh/config
+        echo "    StrictHostKeyChecking=no" >> ~/.ssh/config
+        echo "    UserKnownHostsFile=/dev/null" >> ~/.ssh/config
     - uses: nixbuild/nix-quick-install-action@v30
     - uses: nix-community/cache-nix-action@v6
       with:
@@ -50,5 +65,6 @@ jobs:
       with:
         name: phoenix
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+    - uses: actions/checkout@v4
     - uses: nicknovitski/nix-develop@v1
     - run: for host in euclid; do deploy -sk .#$host 2>&1 | ack --passthru --nocolor "Copying profile" || exit 1; done
