--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,3 +1,7 @@
 {
-  "image": "ghcr.io/xtruder/nix-devcontainer:v1"
+  "image": "ghcr.io/xtruder/nix-devcontainer:v1",
+  "runArgs": ["--device=/dev/net/tun"],
+  "features": {
+      "ghcr.io/tailscale/codespace/tailscale": {}
+  }
 }
