--- a/modules/nixos/programs/klipper/vinci.cfg
+++ b/modules/nixos/programs/klipper/vinci.cfg
@@ -1,23 +1,3 @@
-# This file contains pin mappings for the stock 2021 Creality Ender 3
-# S1 & S1 Pro. To use this config, check the STM32 Chip on the
-# Mainboard, during "make menuconfig" select accordingly either the
-# STM32F103 with "28KiB bootloader" or the STM32F401 with
-# "64KiB bootloader" and serial (on USART1 PA10/PA9) for both.
-
-# For a direct serial connection, in "make menuconfig" select
-# "Enable extra low-level configuration options" and  Serial
-# (on USART2 PA3/PA2), which is on the 10 pin IDC cable used
-# for the LCD module as follows: 3: Tx, 4: Rx, 9: GND, 10: VCC
-
-# Flash this firmware by copying "out/klipper.bin" to a SD card and
-# turning on the printer with the card inserted. The filename
-# must be changed to "firmware.bin"
-
-# With STM32F401, you might need to put "firmware.bin" in a
-# folder on the SD card called "STM32F4_UPDATE" in order to flash.
-
-# See docs/Config_Reference.md for a description of parameters.
-
 [stepper_x]
 step_pin: PC2
 dir_pin: PB9
@@ -26,7 +6,7 @@ microsteps: 16
 rotation_distance: 40
 endstop_pin: !PA5
 position_endstop: -10
-position_max: 235
+position_max: 246
 position_min: -15
 homing_speed: 50
 
@@ -70,6 +50,14 @@ pid_Ki: 1.208
 pid_Kd: 114.859
 min_temp: 0
 max_temp: 260 # Set to 300 for S1 Pro
+max_extrude_only_distance: 101 # For extruder calibration
+max_extrude_cross_section: 5 # KAMP Purging
+
+[firmware_retraction]
+retract_length: 0.8
+retract_speed: 30
+unretract_extra_length: 0
+unretract_speed: 30
 
 [heater_bed]
 heater_pin: PA7
@@ -94,17 +82,16 @@ restart_method: command
 
 [printer]
 kinematics: cartesian
-max_velocity: 300
-max_accel: 2000
+max_velocity: 500
+max_accel: 5000
 max_z_velocity: 5
 max_z_accel: 100
 
 [bltouch]
 sensor_pin: ^PC14
 control_pin: PC13
-x_offset: -31.8
-y_offset: -40.5
-z_offset: 0
+x_offset: -46.0
+y_offset: 0.0
 probe_with_touch_mode: true
 stow_on_each_sample: false
 
@@ -116,7 +103,7 @@ probe_count: 4,4
 algorithm: bicubic
 
 [safe_z_home]
-home_xy_position: 147, 154
+home_xy_position: 161, 114
 speed: 75
 z_hop: 10
 z_hop_speed: 5
@@ -141,6 +128,8 @@ screw4: 20, 198
 path: /var/lib/moonraker/gcodes
 
 [display_status]
+
+[exclude_object]
 
 [pause_resume]
 
@@ -228,3 +217,66 @@ gcode:
   {% else %}
     {action_respond_info("Printer not homed")}
   {% endif %}
+
+# Klipper
+
+[gcode_macro RESTART_]
+description: Restart the Klipper host software
+gcode:
+  RESTART
+
+[gcode_macro RESTART_FIRMWARE]
+description: Restart the Klipper firmware
+gcode:
+  FIRMWARE_RESTART
+
+# Probe
+
+[gcode_macro CALIBRATE_PROBE_Z_OFFSET]
+description: Calibrate the Z-Offset using the BLTouch probe
+gcode:
+  PROBE_CALIBRATE
+
+[gcode_macro TEST_PROBE_ACCURACY]
+description: Calibrate the Z-Offset using the BLTouch probe
+gcode:
+  PROBE_ACCURACY
+
+# Custom macros
+
+[gcode_macro START_PRINT]
+description: Prepare printer for printing
+gcode:
+  {% set BED_TEMP = params.BED_TEMP|default(60)|float %}
+  {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
+  {% set IDLE_TEMP = params.IDLE_TEMP|default(150)|float %}
+
+  G90 ; use absolute coordinates
+  M83 ; extruder relative mode
+
+  M104 S{IDLE_TEMP} ; set temporary nozzle temp to prevent oozing during homing
+  M140 S{BED_TEMP} ; set final bed temp
+
+  G28 ; home all axis
+  BED_MESH_CALIBRATE ; calibrate bed mesh
+
+  SMART_PARK ; park the printhead for final heating
+  M104 S{EXTRUDER_TEMP} ; set final nozzle temp
+  M190 S{BED_TEMP} ; wait for bed temp to stabilize
+  M109 S{EXTRUDER_TEMP} ; wait for nozzle temp to stabilize
+
+  LINE_PURGE ; purge the nozzle
+
+[gcode_macro END_PRINT]
+description: Prepare printer for printing
+gcode:
+  G91 ; relative positioning
+  G1 Z20 ; move nozzle up 20mm
+
+  G90 ; absolute positioning
+  G1 X0 Y220 ; present print
+
+  M140 S0 ; turn off bed
+  M104 S0 ; turn off extruder
+  M107 ; turn off fan
+  M84 ; disable motors
