euclid: feat: update printer config for new mods

--- a/modules/nixos/programs/klipper/vinci.cfg
+++ b/modules/nixos/programs/klipper/vinci.cfg
@@ -49,7 +49,7 @@ pid_Kp: 23.561
 pid_Ki: 1.208
 pid_Kd: 114.859
 min_temp: 0
-max_temp: 260 # Set to 300 for S1 Pro
+max_temp: 300 # Set to 300 for S1 Pro
 max_extrude_only_distance: 101 # For extruder calibration
 max_extrude_cross_section: 5 # KAMP Purging
 
@@ -72,6 +72,7 @@ max_temp: 100 # Set to 110 for S1 Pro
 
 [heater_fan hotend_fan]
 pin: PC0
+fan_speed: 0.4
 
 [fan]
 pin: PA0
@@ -90,7 +91,7 @@ max_z_accel: 100
 [bltouch]
 sensor_pin: ^PC14
 control_pin: PC13
-x_offset: -46.0
+x_offset: -46.8
 y_offset: 0.0
 probe_with_touch_mode: true
 stow_on_each_sample: false
@@ -103,7 +104,7 @@ probe_count: 4,4
 algorithm: bicubic
 
 [safe_z_home]
-home_xy_position: 161, 114
+home_xy_position: 161.8, 114
 speed: 75
 z_hop: 10
 z_hop_speed: 5
