--- a/modules/nixos/programs/klipper/vinci.cfg
+++ b/modules/nixos/programs/klipper/vinci.cfg
@@ -78,7 +78,7 @@ fan_speed: 0.4
 pin: PA0
 
 [mcu]
-serial: /dev/serial1
+serial: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
 restart_method: command
 
 [printer]
@@ -93,6 +93,7 @@ sensor_pin: ^PC14
 control_pin: PC13
 x_offset: -46.8
 y_offset: 0.0
+z_offset: 0.0
 probe_with_touch_mode: true
 stow_on_each_sample: false
 
