--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,6 +12,10 @@ jobs:
   deploy-x64_86:
     runs-on: 	ubuntu-24.04
     steps:
+    - uses: actions/checkout@v4
+    - uses: insightsengineering/disk-space-reclaimer@v1
+      with:
+        swap-storage: false
     - uses: tailscale/github-action@v3
       with:
         oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
@@ -28,20 +32,23 @@ jobs:
     - uses: nixbuild/nix-quick-install-action@v30
     - uses: nix-community/cache-nix-action@v6
       with:
-        primary-key: nix-x86_64-${{ hashFiles('**/*.nix', '**/flake.lock') }}
+        primary-key: nix-x86_64-${{ hashFiles('**.nix', '**/flake.lock') }}
         restore-prefixes-first-match: nix-x86_64-
         gc-max-store-size: 5G
     - uses: cachix/cachix-action@v14
       with:
         name: phoenix
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - uses: actions/checkout@v4
     - uses: nicknovitski/nix-develop@v1
     - run: for host in euler; do deploy -sk .#$host 2>&1 | ack --passthru --nocolor "Copying profile" || exit 1; done
 
   deploy-aarch64:
     runs-on: 	ubuntu-24.04-arm
     steps:
+    - uses: actions/checkout@v4
+    - uses: insightsengineering/disk-space-reclaimer@v1
+      with:
+        swap-storage: false
     - uses: tailscale/github-action@v3
       with:
         oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
@@ -58,13 +65,12 @@ jobs:
     - uses: nixbuild/nix-quick-install-action@v30
     - uses: nix-community/cache-nix-action@v6
       with:
-        primary-key: nix-arm64-${{ hashFiles('**/*.nix', '**/flake.lock') }}
+        primary-key: nix-arm64-${{ hashFiles('**.nix', '**/flake.lock') }}
         restore-prefixes-first-match: nix-arm64-
         gc-max-store-size: 5G
     - uses: cachix/cachix-action@v14
       with:
         name: phoenix
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - uses: actions/checkout@v4
     - uses: nicknovitski/nix-develop@v1
     - run: for host in euclid; do deploy -sk .#$host 2>&1 | ack --passthru --nocolor "Copying profile" || exit 1; done
