euclid: feat update config

--- a/modules/nixos/programs/klipper/vinci.cfg
+++ b/modules/nixos/programs/klipper/vinci.cfg
@@ -93,7 +93,7 @@ sensor_pin: ^PC14
 control_pin: PC13
 x_offset: -46.8
 y_offset: 0.0
-z_offset: 0.0
+# z_offset: 0.0
 probe_with_touch_mode: true
 stow_on_each_sample: false
 
@@ -244,7 +244,7 @@ description: Calibrate the Z-Offset using the BLTouch probe
 gcode:
   PROBE_ACCURACY
 
-# Custom macros
+# Print macros
 
 [gcode_macro START_PRINT]
 description: Prepare printer for printing
@@ -282,3 +282,49 @@ gcode:
   M104 S0 ; turn off extruder
   M107 ; turn off fan
   M84 ; disable motors
+
+# Debugging macros
+
+[gcode_macro SEARCH_VARS]
+#
+# SEARCH_VARS
+#
+# Dump the printer object so you can find variables of interest
+# Credit to https://gist.github.com/mpalpha/ for the original
+#
+description: Dump the printer object to the console
+gcode:
+    {% set search = params.S|lower %}
+    {% set ns = namespace() %}
+    {% for item in printer  %}
+        {% if ' ' in item %}
+            {% set ns.path = ['printer', "['%s']" % (item), ''] %}
+        {% else %}
+            {% set ns.path = ['printer.', item, ''] %}   
+        {% endif %} 
+
+        {% if search in ns.path|lower %}
+            { action_respond_info(ns.path|join) }
+        {% endif %} 
+
+        {% if printer[item].items() %}
+            {% for childkey, child in printer[item].items() recursive %}
+                {% set ns.path = ns.path[:loop.depth|int + 1] %}
+
+                {% if ' ' in childkey %}
+                    {% set null = ns.path.append("['%s']" % (childkey)) %}
+                {% else %}
+                    {% set null = ns.path.append(".%s" % (childkey)) %}
+                {% endif %} 
+
+                {% if child is mapping  %}
+                    { loop(child.items()) }
+                {% else %}
+                    {% if search in ns.path|lower %}
+                        { action_respond_info("%s : %s" % (ns.path|join, child)) }   
+                    {% endif %} 
+                {% endif %} 
+                
+            {% endfor %}
+        {% endif %} 
+    {% endfor %}
