euclid: feat: use nozzle wiper

--- a/modules/nixos/programs/klipper/vinci.cfg
+++ b/modules/nixos/programs/klipper/vinci.cfg
@@ -6,7 +6,7 @@ microsteps: 16
 rotation_distance: 40
 endstop_pin: !PA5
 position_endstop: -10
-position_max: 246
+position_max: 247
 position_min: -15
 homing_speed: 50
 
@@ -244,6 +244,24 @@ description: Calibrate the Z-Offset using the BLTouch probe
 gcode:
   PROBE_ACCURACY
 
+[gcode_macro PURGE_CLEAN]
+description: Purge the nozzle and clean it
+gcode:
+  {% set PURGE_AMOUNT = params.PURGE_AMOUNT|default(25)|float %}
+
+  G1 E{PURGE_AMOUNT} F200 ; purge nozzle
+
+  # clean the nozzle
+  G1 X220 F10000
+  G1 X242 F5000
+  G1 X220 F10000
+  G1 X242 F5000
+  G1 X220 F10000
+  G1 X242 F5000
+  G1 X220 F10000
+  G1 X242 F5000
+  G1 X220 F10000
+
 # Print macros
 
 [gcode_macro START_PRINT]
@@ -262,12 +280,12 @@ gcode:
   G28 ; home all axis
   BED_MESH_CALIBRATE ; calibrate bed mesh
 
-  SMART_PARK ; park the printhead for final heating
+  G1 X247 F10000 ; park the printhead for final heating
   M104 S{EXTRUDER_TEMP} ; set final nozzle temp
   M190 S{BED_TEMP} ; wait for bed temp to stabilize
   M109 S{EXTRUDER_TEMP} ; wait for nozzle temp to stabilize
 
-  LINE_PURGE ; purge the nozzle
+  PURGE_CLEAN ; purge the nozzle
 
 [gcode_macro END_PRINT]
 description: Prepare printer for printing
