euclid: fix: make PURGE_CLEAN usable without PRINT_START

--- a/modules/nixos/programs/klipper/vinci.cfg
+++ b/modules/nixos/programs/klipper/vinci.cfg
@@ -249,6 +249,8 @@ description: Purge the nozzle and clean it
 gcode:
   {% set PURGE_AMOUNT = params.PURGE_AMOUNT|default(25)|float %}
 
+  G1 X247 F10000 ; move to purging position
+
   G1 E{PURGE_AMOUNT} F200 ; purge nozzle
 
   # clean the nozzle
