--- a/modules/nixos/programs/klipper/vinci.cfg
+++ b/modules/nixos/programs/klipper/vinci.cfg
@@ -244,11 +244,26 @@ description: Calibrate the Z-Offset using the BLTouch probe
 gcode:
   PROBE_ACCURACY
 
+# Tools
+
+[gcode_macro CG28]
+gcode:
+    {% if "xyz" not in printer.toolhead.homed_axes %}
+        G28
+    {% endif %}
+
 [gcode_macro PURGE_CLEAN]
 description: Purge the nozzle and clean it
 gcode:
   {% set PURGE_AMOUNT = params.PURGE_AMOUNT|default(25)|float %}
+  
+  SAVE_GCODE_STATE NAME=purge_clean_state
 
+  G90 ; use absolute coordinates
+  M83 ; extruder relative mode
+
+  CG28 ; conditionally home
+  
   G1 X247 F10000 ; move to purging position
 
   G1 E{PURGE_AMOUNT} F200 ; purge nozzle
@@ -263,6 +278,8 @@ gcode:
   G1 X220 F10000
   G1 X242 F5000
   G1 X220 F10000
+
+  RESTORE_GCODE_STATE NAME=purge_clean_state
 
 # Print macros
 
