euclid: feat: calibrate printer

--- a/modules/nixos/programs/klipper/vinci.cfg
+++ b/modules/nixos/programs/klipper/vinci.cfg
@@ -3,7 +3,7 @@ step_pin: PC2
 dir_pin: PB9
 enable_pin: !PC3
 microsteps: 16
-rotation_distance: 40.041
+rotation_distance: 40.002
 endstop_pin: !PA5
 position_endstop: -10
 position_max: 247
@@ -15,7 +15,7 @@ step_pin: PB8
 dir_pin: PB7
 enable_pin: !PC3
 microsteps: 16
-rotation_distance: 39.989
+rotation_distance: 39.969
 endstop_pin: !PA6
 position_endstop: -8
 position_max: 238
@@ -134,6 +134,8 @@ path: /var/lib/moonraker/gcodes
 [exclude_object]
 
 [pause_resume]
+
+[skew_correction] 
 
 [gcode_macro PAUSE]
 description: Pause the actual running print
