euclid: feat: load skew profile when printing

--- a/modules/nixos/programs/klipper/vinci.cfg
+++ b/modules/nixos/programs/klipper/vinci.cfg
@@ -308,9 +308,13 @@ gcode:
 
   PURGE_CLEAN ; purge the nozzle
 
+  SKEW_PROFILE LOAD=vinci ; load skew profile
+
 [gcode_macro END_PRINT]
 description: Prepare printer for printing
 gcode:
+  SET_SKEW CLEAR=1 ; clear skew profile
+
   G91 ; relative positioning
   G1 Z20 ; move nozzle up 20mm
 
